deploy/athens/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: athens
  namespace: gag-dogfood
spec:
  selector:
    app: athens
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
